--- a/package.json
+++ b/package.json
@@ -58,24 +58,24 @@
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
-    "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
+    "eslint": "^2.13.1",
     "expect": "^1.20.2",
-    "express": "^4.13.4",
     "express-beautify": "^0.1.2",
+    "express": "^4.13.4",
     "history": "^3.0.0",
     "jsdom": "^9.4.1",
     "mocha": "^2.4.4",
     "nodemon": "^1.8.1",
-    "react-addons-test-utils": "15.1.0",
-    "react-dom": "15.1.0",
+    "react-addons-test-utils": "^15.3.2",
+    "react-dom": "^15.3.0",
     "react-router": "^2.0.0",
-    "webpack": "^1.13.1",
-    "webpack-merge": "^0.14.0"
+    "react": "^15.3.0",
+    "webpack-merge": "^0.14.0",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react": "15.1.0"
+    "classnames": "^2.2.5"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
