--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
     "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-resolver": "^0.0.7",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.3.13",
     "eslint-plugin-react": "^5.2.2",
     "eslint": "^2.13.1",
     "expect": "^1.20.2",
@@ -71,7 +72,7 @@
     "react-router": "^2.0.0",
     "react": "^15.3.0",
     "webpack-merge": "^0.14.0",
-    "webpack": "^1.13.1"
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "classnames": "^2.2.5"
