--- a/package.json
+++ b/package.json
@@ -52,29 +52,32 @@
   "devDependencies": {
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
-    "babel-eslint": "^6.1.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^7.0.0",
-    "babel-plugin-resolver": "^0.0.7",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.3.13",
     "eslint-plugin-react": "^5.2.2",
-    "eslint": "^2.13.1",
+    "eslint": "^3.15.0",
     "expect": "^1.20.2",
     "express-beautify": "^0.1.2",
     "express": "^4.13.4",
     "jsdom": "^9.4.1",
-    "mocha": "^2.4.4",
+    "mocha": "^3.1.0",
     "nodemon": "^1.8.1",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.0",
-    "react-router": "^2.0.0",
+    "react-router": "^3.0.0",
     "react": "^15.3.0",
-    "webpack-merge": "^0.14.0",
+    "webpack-merge": "^4.1.0",
     "webpack": "^2.3.3"
   },
   "dependencies": {
     "classnames": "^2.2.5"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
   }
 }
