--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
       "url": "https://github.com/jeffhandley"
     },
     {
-        "name": "Brad Ullman",
-        "email": "Brad.Ullman@concur.com",
-        "url": "https://github.com/bcullman"
+      "name": "Brad Ullman",
+      "email": "Brad.Ullman@concur.com",
+      "url": "https://github.com/bcullman"
     }
   ],
   "directories": {
@@ -49,7 +49,7 @@
     "lint": "eslint --ext .js,.jsx ${npm_config_glob:-${npm_package_config_lint_glob}}",
     "lint:watch": "nodemon -e js,jsx --exec 'npm run lint --silent || true'",
     "postlint": "echo 'Lint Complete'",
-    "pretest": "echo 'Tests Starting:' && echo '  grep: '${npm_config_grep:-${npm_package_config_test_grep_unit} (default)} && echo '  glob: '${npm_config_glob:-${npm_package_config_test_glob} (default)}",
+    "pretest": "npm install -g npm-install-peers && npm-install-peers",
     "test": "mocha --recursive --compilers js:babel-core/register ${npm_config_glob:-${npm_package_config_test_glob}}",
     "test:watch": "nodemon -e js,jsx --exec 'npm run test --silent || true'",
     "clean": "rm -rf ./lib && rm -rf ./dist",
@@ -58,7 +58,8 @@
     "build": "babel src -d lib && webpack",
     "postbuild": "echo 'Build Complete'",
     "rebuild": "npm run clean && npm run build",
-    "demo": "NODE_ENV=development nodemon -e js,jsx --exec 'babel-node demo'"
+    "demo": "NODE_ENV=development nodemon -e js,jsx --exec 'babel-node demo'",
+    "predemo": "npm install -g npm-install-peers && npm-install-peers"
   },
   "config": {
     "lint_glob": ".",
@@ -81,14 +82,16 @@
     "jsdom": "^9.4.1",
     "mocha": "^3.1.0",
     "nodemon": "^1.8.1",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.0",
     "react-router": "^3.0.0",
     "webpack-merge": "^4.1.0",
     "webpack": "^2.3.3"
   },
   "dependencies": {
-    "react": "^15.3.0",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "prop-types": "^15.6.0"
+  },
+  "peerDependencies": {
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0"
   }
 }
