--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lint:watch": "nodemon -e js,jsx --exec 'npm run lint --silent || true'",
     "postlint": "echo 'Lint Complete'",
     "pretest": "npm install -g npm-install-peers && npm-install-peers",
-    "test": "mocha --recursive --compilers js:babel-core/register ${npm_config_glob:-${npm_package_config_test_glob}}",
+    "test": "jest",
     "test:watch": "nodemon -e js,jsx --exec 'npm run test --silent || true'",
     "clean": "rm -rf ./lib && rm -rf ./dist",
     "posttest": "echo 'Tests Complete'",
@@ -71,27 +71,35 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.3.13",
-    "eslint-plugin-react": "^5.2.2",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.3",
     "eslint": "^3.15.0",
+    "eslint-plugin-react": "^5.2.2",
     "expect": "^1.20.2",
-    "express-beautify": "^0.1.2",
     "express": "^4.13.4",
+    "express-beautify": "^0.1.2",
+    "jest": "^21.2.1",
     "jsdom": "^9.4.1",
-    "mocha": "^3.1.0",
     "nodemon": "^1.8.1",
     "react-router": "^3.0.0",
-    "webpack-merge": "^4.1.0",
-    "webpack": "^2.3.3"
+    "react-test-renderer": "^16.0.0",
+    "webpack": "^2.3.3",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "prop-types": "^15.6.0"
   },
   "peerDependencies": {
-    "react": "^15.6.0",
-    "react-dom": "^15.6.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
+  "jest": {
+    "setupFiles": [
+      "./test/setup.js"
+    ]
   }
 }
