--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
     "babel-eslint": "^7.0.0",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.24.1",
@@ -79,7 +80,7 @@
     "expect": "^1.20.2",
     "express": "^4.13.4",
     "express-beautify": "^0.1.2",
-    "jest": "^21.2.1",
+    "jest": "^22.4.3",
     "jsdom": "^9.4.1",
     "nodemon": "^1.8.1",
     "react": "^16.0.0",
